# bruto-ide

./: Cargo.toml  README.md
.tokensave/: config.json  tokensave.db
src/: debugger.rs  gutter.rs  ide.rs  ide_editor.rs  language.rs  lib.rs  output_panel.rs  watch_window.rs
